--- a/style.css
+++ b/style.css
@@ -8,16 +8,20 @@ body {
 
 .boss {
   height: 30vh;
-  max-width: 50vw;
+  max-width: 40vw;
   transform: translateY(-5rem);
 }
 
 .hero {
-  max-height: 45vh;
+  max-height: 40vh;
   max-width: 40vw;
 }
 
 .sidekick {
   max-height: 20vh;
   transform: rotateY(180deg);
+}
+
+.shop-card {
+  background-color: rgba(115, 244, 186, 0.514);
 }
